--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -12,99 +12,65 @@
           <div class="card">
             <!--<h5>Purchase List</h5>-->
 
-            <p-table #dt2 [value]="recipes" responsiveLayout="scroll"
-              [globalFilterFields]="['code','name','stock','cout','brut','brut','quantite','detailCuisine','detailCuisine','preparationIngredient','unit','categorie']">
+          <p-table
+            #dt2
+            [value]="recipes"
+            responsiveLayout="scroll"
+            [globalFilterFields]="['code','name','stock','cout','brut','quantite','detailCuisine','preparationIngredient','unit','categorie']">
 
+            <ng-template pTemplate="header">
+              <tr>
+                <th pSortableColumn="youcooker" pColumnFilter="youcooker">YOU COOKER <p-sortIcon field="youcooker"></p-sortIcon></th>
+                <th pSortableColumn="name" pColumnFilter="name">NOM <p-sortIcon field="name"></p-sortIcon></th>
+                <th pSortableColumn="stock" pColumnFilter="stock">STOCK <p-sortIcon field="stock"></p-sortIcon></th>
+                <th pSortableColumn="jepartage" pColumnFilter="jepartage">JE PARTAGE ? <p-sortIcon field="jepartage"></p-sortIcon></th>
+                <th style="justify-content: center; text-align: center;">ACTIONS</th>
+              </tr>
+            </ng-template>
 
-              <ng-template pTemplate="caption">
-                <div class="flex">
-                  <!--<button pButton label="Tout afficher" class="p-button-outlined" icon="pi pi-filter-slash" (click)="tableShort.clear(dt2)"></button>-->
-                  <span class="p-input-icon-left mr-auto">
-                    <i class="pi pi-search"></i>
-                    <!--<input pInputText type="text" [(ngModel)]="motRecherche" (input)="dt2.filterGlobal(motRecherche, 'contains')" placeholder="Rechercher" />-->
-                    <input pInputText type="text" [(ngModel)]="motRecherche" (input)="recherche()"
-                      placeholder="Rechercher" />
-                  </span>
-                </div>
-              </ng-template>
+            <ng-template pTemplate="body" let-dishes>
+              <tr class="cursor-pointer">
+                <!-- Colonne YOU COOKER -->
+                <td style="width: 15%; min-width: 8rem;">
+                  {{ dishes.jepartage ? 'MOI' : '' }}
+                </td>
 
-              <ng-template pTemplate="header">
-                <tr>
-                  <!-- <th pSortableColumn="code" pColumnFilter="code">Code<p-sortIcon field="code"></p-sortIcon></th> -->
-                  <th pSortableColumn="name" pColumnFilter="name">NOM<p-sortIcon field="name"></p-sortIcon></th>
-                  <!--<th pSortableColumn="categorie" pColumnFilter="categorie">Categorie<p-sortIcon field="categorie"></p-sortIcon></th>-->
+                <!-- Nom -->
+                <td style="width: 25%; min-width: 8rem;">{{ dishes?.name }}</td>
 
-                  <th pSortableColumn="stock" pColumnFilter="stock">STOCK<p-sortIcon field="stock"></p-sortIcon></th>
-                  <th pSortableColumn="stock" pColumnFilter="stock">RECETTE PRINCIPALE<p-sortIcon
-                      field="stock"></p-sortIcon></th>
+                <!-- Stock -->
+                <td style="width: 15%; min-width: 8rem;">
+                  {{ dishes?.stock }} <span *ngIf="dishes.stock">Kg</span>
+                </td>
 
-                  <!--<th pSortableColumn="cout" pColumnFilter="cout">Cout<p-sortIcon field="cout"></p-sortIcon></th>-->
+                <!-- Je partage (checkbox + confirmation dialog) -->
+                <td style="width: 20%; min-width: 8rem; text-align: center;">
+                  <p-checkbox
+                    binary="true"
+                    [(ngModel)]="dishes.jepartage"
+                    (onChange)="onShareToggle(dishes)">
+                  </p-checkbox>
+                </td>
 
-                  <th style="justify-content: center; text-align: center;">ACTIONS</th>
-                  <!-- <th></th> -->
+                <!-- Actions -->
+                <td style="width: 30%; text-align: center;">
+                  <button pButton pRipple type="button" (click)="show('top-right', dishes)" icon="pi pi-pencil"
+                    class="p-button p-component p-button-text p-button-icon-only"></button>
 
-                  <!--<th></th>-->
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-dishes>
-                <tr class="cursor-pointer">
-                  <!-- <td (click)="showDishesDetail($event,dishes)" style="width: 20%; min-width: 8rem;">{{dishes?.code}}
-                  </td> -->
-                  <td (click)="showDishesDetail($event,dishes)" style="width: 20%; min-width: 8rem;">{{dishes?.name}}
-                  </td>
-                  <!--<td (click)="show($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.address?.address?.label}}</td>
-          
-                              <td (click)="showDishesDetail($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.categoryRecipe?.name }}</td>-->
+                  <button pButton pRipple type="button" (click)="showPrepa(dishes)"
+                    class="p-button p-component p-button-text p-button-icon-only">
+                    <i class="pi pi-cog text-blue-500"></i>
+                  </button>
 
-                  <td (click)="showDishesDetail($event,dishes)" style="width: 20%; min-width: 8rem;">{{dishes?.stock}} <span
-                      *ngIf="dishes.stock"> Kg</span></td>
+                  <button pButton pRipple type="button" (click)="delete('top-right', dishes)" icon="pi pi-trash"
+                    class="p-button p-component p-button-text p-button-icon-only"></button>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
 
-                  <td (click)="showDishesDetail($event,dishes)" style="width: 5%; min-width: 8rem;">
-                    <span [class]="dishes.principaleRecipe ? 'text-green-500' : 'text-red-500'">
-                      {{ dishes.principaleRecipe ? 'OUI' : 'NON' }}
-                    </span>
-                  </td>
-                  <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.cout }}</td>-->
+  <p-confirmDialog [style]="{ width: '400px' }" key="confirmShare" header="Confirmation"></p-confirmDialog>
 
-                  <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes.entryDate | date:'yyyy-MM-dd HH:mm'}}</td> -->
-
-                  <!--<td style="width: 15%;" (click)="show($event,dishes)">
-                                <button pButton pRipple type="button"  icon="pi pi-eye" class="p-button p-component p-button-text p-button-icon-only"></button>
-                              </td>-->
-
-                  <td style="width: 45%; text-align: center;">
-                    <button pButton pRipple type="button" (click)="show('top-right',dishes)" icon="pi pi-pencil"
-                      class="p-button p-component p-button-text p-button-icon-only"></button>
-
-                    <button pButton pRipple type="button" icon="pi pi-some-icon" (click)="showPrepa(dishes)"
-                      class="p-button p-component p-button-text p-button-icon-only">
-                      <!-- Vous pouvez insérer votre SVG ici -->
-                      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        width="24" height="24" viewBox="0 0 256 256" enable-background="new 0 0 256 256"
-                        xml:space="preserve">
-                        <g>
-                          <g>
-                            <g>
-                              <path fill="#007ad9"
-                                d="M33.4,5.3c-1.5,0.8-2.4,2.6-2.5,4.6c0,1.3,0.4,2,2.5,4l2.5,2.4l-0.2,3c-0.3,3.8-2,7.8-6.4,15.1c-6.9,11.4-9,16.8-9.1,23.3c-0.1,6.2,1.9,9.8,6.9,12.3c5.1,2.5,8.9,1.7,10.1-2.1c1-3.1-1-5.8-4.9-6.8c-4.2-1-2.8-7.5,3.8-18c10.4-16.4,12.5-27.9,6.5-34.8C39.5,4.9,36.1,3.8,33.4,5.3z" />
-                              <path fill="#007ad9"
-                                d="M60.3,12.1c-3,0.8-4.7,2-4.7,3.2c0,0.5,0.9,2,2,3.2c1.7,1.9,1.9,2.2,1.3,2.8c-0.4,0.3-0.9,1.2-1.1,2c-0.2,0.8-1.6,3.6-3.2,6.3c-3.4,5.8-4.7,9.1-5.1,13c-0.5,4.8,1.6,8.6,5.8,10.4c1.7,0.7,1.9,0.7,4.7-0.7c4.7-2.3,4.8-3.9,0.8-6.8l-2.1-1.6l0.7-1.8c0.4-1,2-3.9,3.6-6.5c6.4-10.5,7.1-18.4,1.9-22.6c-0.9-0.8-1.8-1.5-2-1.4C62.8,11.4,61.6,11.8,60.3,12.1z" />
-                              <path fill="#007ad9"
-                                d="M125.5,57.2c-6.7,1.8-13.9,7.2-16.6,12.6l-1.2,2.4l-27.1-4C65.6,66,53,64.3,52.4,64.5c-4.2,1-5.4,7-1.8,9.3c1.1,0.8,20.9,3.8,128.7,19.6l26.9,4l1.7-0.9c2.3-1.2,3.4-4.2,2.4-6.3c-1.5-2.9-1.5-2.9-27.3-6.7c-13.3-2-24.2-3.7-24.4-3.8c-0.1-0.1-0.6-1.6-1-3.3c-2-8.7-9.6-16.4-18.6-19.1C135.8,56.3,129.1,56.3,125.5,57.2z M139.1,68.1c4.2,1.6,7,4.7,8.3,9.1c0.3,1,0.1,1-10.7-0.6c-6.1-0.9-12.8-1.9-14.9-2.2l-3.9-0.6l2.4-2.5c3.3-3.6,6-4.6,11.7-4.4C135,66.9,137.2,67.3,139.1,68.1z" />
-                              <path fill="#007ad9"
-                                d="M47.9,107.7c-2.3,1.6-2.4,2-2.4,9.2v6.8l-4.2-1.8c-6.1-2.7-12.1-4.3-19.3-5.2c-7.1-0.9-8.4-0.7-10.4,1.3c-1.9,1.9-1.9,4.7,0,6.8c1.3,1.5,1.6,1.6,6.4,2c10.9,1,19.7,3.9,26,8.5l1.6,1.2v40.5c0,45.6-0.1,44,3.7,51.9c4.8,10.1,13.4,17.6,23.9,21l4.5,1.5h50.3c49,0,50.4,0,53.8-1c11.1-3.1,20.5-11.2,25.6-22c3.5-7.5,3.3-4.7,3.5-50.8l0.1-41.5l2.4-1.6c6-3.9,13.9-6.5,22.4-7.4c7.3-0.7,7.5-0.8,8.8-2.2c1.6-1.7,1.9-3.7,0.9-5.8c-1.3-2.7-3-3.3-7.9-2.9c-8.6,0.7-17.7,3-23.9,6.1l-2.8,1.4l-0.1-7c-0.1-6.9-0.1-7-1.5-8.3l-1.3-1.4l-79.4-0.1C54.2,106.9,49,106.9,47.9,107.7z M200,168.6l-0.1,51.1l-1.3,3.2c-3.3,8.7-8.2,13.5-16.9,16.9l-3.2,1.3l-49.1,0.1c-54.3,0.1-52.3,0.2-58.8-3c-4.1-2-9.5-7.2-11.5-11.2c-3.4-6.6-3.2-3.2-3.4-59.1l-0.2-50.3h72.3h72.3L200,168.6z" />
-                            </g>
-                          </g>
-                        </g>
-                      </svg>
-                    </button>
-
-                    <button pButton pRipple type="button" (click)="delete('top-right',dishes)" icon="pi pi-trash"
-                      class="p-button p-component p-button-text p-button-icon-only"></button>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
             <p-paginator (onPageChange)="onPageChange($event)" [rows]="rows" [totalRecords]="totalRows"
               [rowsPerPageOptions]="[10, 25, 50]"></p-paginator>
 
